--- a/app/pages/4/css.css
+++ b/app/pages/4/css.css
@@ -1,109 +1,37 @@
-@font-face {
-  font-family: 'DS-DIGI';
-  src: url('/fonts/DS-DIGI.TTF') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+.f4__form-content {
+  display: grid;
+  margin-bottom: 10px
 }
-.f4, .f4__buttons-s, .f4__buttons-b {
- display: grid;
- grid-gap: 10px;
- align-items: start;
+.f4__form input {
+   padding: 5px;
 }
-.f4 {
-  grid-template: 
-  "windows process" auto
-  "buttons process" auto
-  "buttonb process" auto
-  /7fr 4fr;
+.f4__form input[type="submit"] {
+  padding: 5px 10px;
 }
-.f4__window {
- grid-area: windows;
- background: #cfc;
- border-radius: 8px;
- padding: 5px 14px;
- overflow-y: overlay;
+.from__input-content {
+  display: flex;
+  flex-direction: column;
+  padding: 5px 0;
 }
-.f4__window-operation, .f4__window-text, .f4__window-answer, .f4__window-history {
- color: #000;
- line-height: normal;
- min-height: 20px;
+.f4__response {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 12px;
+  padding: 10px 0;
 }
-.f4__window-quest {
- width: 100%;
- display: flex;
- font-family: monospace;
- font-size: 16px;
+.f4__response__joined {
+  border: 1px solid var(--border);
+  padding: 10px;
+  max-width: 700px;
+  height: min-content;
 }
-.f4__window-text {
- font-weight: 700;
- animation: animate-blink 1s forwards infinite;
+.f4__response__joined-group, .f4__response__joined-input {
+  display: flex;
+  flex-wrap: wrap;
 }
-.f4__window-answer, .f4__window-history {
- text-align: right;
- font-family: DS-DIGI;
- font-size: 20px;
-}
-.f4__buttons-b {
- grid-area: buttonb;
- grid-template-columns: repeat(5,1fr);
-}
-.f4__buttons-s {
-  grid-area: buttons;
-  grid-template-columns: repeat(6,1fr);
- }
-.f4__buttons-s button, .f4__buttons-b button {
-  cursor: pointer;
-  border: none;
-  border-radius: 3px;
-  font-weight: 700;
-  color: #fff;
-  box-shadow: 1px 1px 5px 0 #000;
- }
-.f4__button-s {
-  background: #223;
-  height: 22px;
-  font-size: 14px;
-}
-.f4__button-b {
-  background: #777;
-  height: 30px;
-  font-size: 18px;
-}
-.f4__button-n[value="DEL"], .f4__button-n[value="AC"] {
- background: #c55;
-}
-.f4__process {
-  grid-area: process;
-  min-height: 50px;
-  border-left: 3px solid var(--color-title);
-  padding-left: 10px;
-  color: var(--color-text);
-}
-@keyframes animate-blink {
- 0% {
-   filter: opacity(1);
- }
- 50% {
-   filter: opacity(0);
- }
- 90% {
-   filter: opacity(1);
- }
- 100% {
-   filter: opacity(1);
- }
-}
-@media screen and (max-width: 800px) {
- .f4 {
-   grid-template: 
-   "windows" auto
-   "buttons" auto
-   "buttonb" auto
-   "process" auto
-   /1fr;
- }
- .f4__history-div {
-   display: flex;
-   flex-direction: column-reverse;
- }
+@media screen and (min-width: 800px) {
+  .f4__form-content {
+    grid-template-columns: 1fr 1fr;
+  }
 }
