--- a/app/pages/news/css.css
+++ b/app/pages/news/css.css
@@ -19,8 +19,15 @@
   display: flex;
   padding: 10px 15px;
   gap: 35px;
+  flex-direction: column;
+  align-items: center;
 }
 .news__version-title {
   font-size: 1.3em;
   font-weight: bold;
+}
+@media screen and (min-width: 600px){
+  .news__version-content {
+    flex-direction: row;
+  }
 }
