--- a/app/pages/3/css.css
+++ b/app/pages/3/css.css
@@ -1,20 +1,22 @@
 .f3,
+.f3__calculator,
 .f3__buttons-s,
 .f3__buttons-b {
   display: grid;
-  grid-gap: 10px;
+  grid-gap: 10px 5px;
   align-items: start;
 }
 .f3 {
   grid-template:
-    "windows" auto
-    "buttons" auto
-    "buttonb" auto
+    "calculator" auto
     "process" auto
     / 1fr;
+  grid-gap: 15px;
+}
+.f3__calculator {
+  grid-area: calculator;
 }
 .f3__window {
-  grid-area: windows;
   background: #cfc;
   border-radius: 8px;
   padding: 5px 14px;
@@ -41,15 +43,13 @@
 .f3__window-answer,
 .f3__window-history {
   text-align: right;
-  font-family: DS-DIGI;
+  font-family: 'ds-digi';
   font-size: 20px;
 }
 .f3__buttons-b {
-  grid-area: buttonb;
   grid-template-columns: repeat(5, 1fr);
 }
 .f3__buttons-s {
-  grid-area: buttons;
   grid-template-columns: repeat(6, 1fr);
 }
 .f3__buttons-s button,
@@ -65,12 +65,12 @@
 }
 .f3__button-s {
   background: #223;
-  height: 25px;
+  height: 28px;
   font-size: 14px;
 }
 .f3__button-b {
   background: #777;
-  height: 30px;
+  height: 35px;
   font-size: 18px;
 }
 .f3__button-n[value="DEL"],
@@ -79,11 +79,11 @@
 }
 .f3__process {
   font-family: math;
-  grid-area: process;
   min-height: 50px;
   border-left: 3px solid var(--color-title);
   padding-left: 10px;
   color: var(--color-text);
+  overflow-wrap: anywhere;
 }
 @keyframes animate-blink {
   0% {
@@ -102,10 +102,12 @@
 @media screen and (min-width: 900px) {
   .f3 {
     grid-template:
-      "windows process" auto
-      "buttons process" auto
-      "buttonb process" auto
+      "calculator process" auto
       / 7fr 4fr;
+  }
+  .f3__buttons-s,
+  .f3__buttons-b {
+    grid-gap: 15px 12px;
   }
   .f3__history-div {
     display: flex;
