--- a/public/styles/view.css
+++ b/public/styles/view.css
@@ -1,79 +1,20 @@
+@media screen and (min-width: 500px) {
+  main {
+    margin: 12px;
+  }
+}
 @media screen and (min-width: 1500px) {
-	/* +2 */
-	* {
+	main {
 		font-size: 18px;
 	}
-	h1 {
-		font-size: 34px;
-	}
-	h2 {
-		font-size: 26px;
-	}
-	.f1__answer button {
-		font-size: 37px;
-	}
-	.f4__window-answer, .container15, .loading-bar15, .f22__commit__left-button, .f22__object__left-button {
-		font-size: 22px;
-	}
-	.f4__buttons button {
-		font-size: 17px;
-	}
-	.f11__reloj div {
-		font-size: 32px;
-	}
-	.f22__admin__date {	
-		font-size: 16px;
-	}
 }
-@media screen and (min-width: 1700px) {
-	* {
+@media screen and (min-width: 1900px) {
+	main {
 		font-size: 20px;
 	}
-	h1 {
-		font-size: 36px;
-	}
-	h2 {
-		font-size: 28px;
-	}
-	.f1__answer button {
-		font-size: 39px;
-	}
-	.f4__window-answer, .container15, .loading-bar15, .f22__commit__left-button, .f22__object__left-button {
+}
+@media screen and (min-width: 2600px) {
+	main {
 		font-size: 24px;
-	}
-	.f4__buttons button {
-		font-size: 19px;
-	}
-	.f11__reloj div {
-		font-size: 34px;
-	}
-	.f22__admin__date {	
-		font-size: 18px;
-	}
-}
-@media screen and (min-width: 2000px) {
-	* {
-		font-size: 22px;
-	}
-	h1 {
-		font-size: 38px;
-	}
-	h2 {
-		font-size: 30px;
-	}
-	.f1__answer button {
-		font-size: 41px;
-	}
-	.f4__window-answer, .container15, .loading-bar15, .f22__commit__left-button, .f22__object__left-button {
-		font-size: 43px;
-	}
-	.f4__buttons button {
-		font-size: 21px;
-	}
-	.f11__reloj div {
-		font-size: 36px;
-	}
-	.f22__admin__date {	
-		font-size: 20px;
 	}
 }
