--- a/app/pages/2/css.css
+++ b/app/pages/2/css.css
@@ -1,6 +1,5 @@
 .f2 {
-  display: flex;
-  flex-direction: column;
+  grid-template-columns: repeat(3, minmax(0, 293px));
 }
 .div-inline {
  display: inline-block;
@@ -18,21 +17,6 @@
 .block {
  display: inline-block;
 }
-.numbers-input {
- width: 11px;
- height: 11px;
- border-radius: 50px;
- display: inline-block;
-}
-.numbers-input:hover {
- cursor: pointer;
-}
-.button-inactive {
- background: #d11;
-}
-.button-active {
- background:  #11d;
-}
 .error-active {
  display: block;
  background: var(--err-background);
@@ -46,8 +30,6 @@
 .error-inactive {
  display: none;
 }
-.submit {
- padding: 3px;
- cursor: pointer;
- width: min-content;
+.result {
+  margin-top: 10px;
 }
