--- a/app/pages/6/css.css
+++ b/app/pages/6/css.css
@@ -3,7 +3,7 @@
   font-size: 5rem;
   border-radius: 50px;
 }
-.text div {
-  display: inline-block;
-  margin-right: 5px;
+.f6 form {
+  grid-template-columns: repeat(2, minmax(0, 293px));
+  margin-bottom: 10px;
 }
