--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,7 +2,7 @@
 .form__div {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   width: 100px;
 }
 .form__div, .button {
@@ -18,6 +18,12 @@
 }
 .form__div img {
   object-fit: contain;
+}
+body[data-theme="light"] .form__div__img-ok, body[data-theme="old"] .form__div__img-ok {
+  filter: brightness(0) invert(1);
+}
+body[data-theme="dark"] .form__div__img-ok {
+  filter: contrast(0);
 }
 /* Checkbox */
 .form__checkbox-content {
