--- a/app/globals.css
+++ b/app/globals.css
@@ -1,216 +1,225 @@
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
 @font-face {
-  font-family: "ds-digi";
-  src: url("/fonts/DS-DIGI.TTF") format("truetype");
-  font-weight: normal;
-  font-style: normal;
+	font-family: "ds-digi";
+	src: url("/fonts/DS-DIGI.TTF") format("truetype");
+	font-weight: normal;
+	font-style: normal;
 }
 @font-face {
-  font-family: "geistMonoVF";
-  src: url("/fonts/GeistMonoVF.woff") format("truetype");
-  font-weight: normal;
-  font-style: normal;
+	font-family: "geistMonoVF";
+	src: url("/fonts/GeistMonoVF.woff") format("truetype");
+	font-weight: normal;
+	font-style: normal;
 }
 @font-face {
-  font-family: "geistVF";
-  src: url("/fonts/GeistVF.woff") format("truetype");
-  font-weight: normal;
-  font-style: normal;
+	font-family: "geistVF";
+	src: url("/fonts/GeistVF.woff") format("truetype");
+	font-weight: normal;
+	font-style: normal;
 }
 @font-face {
-  font-family: "avenir";
-  src: url("/fonts/Avenir_LT_35_Light.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
+	font-family: "avenir";
+	src: url("/fonts/Avenir_LT_35_Light.ttf") format("truetype");
+	font-weight: normal;
+	font-style: normal;
 }
 body[data-theme="light"] {
-  --background-main: #8de;
-  --background-side: #eee;
-  --color-text: #000;
-  --color-title: #149;
-  --hover: #bef;
-  --active: #cef;
-  --border: #346;
-  --invert: #eee;
+	--background-main: #8de;
+	--background-side: #eee;
+	--color-text: #000;
+	--color-title: #149;
+	--hover: #bef;
+	--active: #cef;
+	--border: #346;
+	--invert: #eee;
 }
 body[data-theme="dark"] {
-  --background-main: #333;
-  --background-side: #555;
-  --background-input: #333;
-  --background-link: #222;
-  --color-text: #ccc;
-  --color-title: #ccc;
-  --color-link: #8bf;
-  --placeholder-text: #777;
-  --hover: #ccc2;
-  --active: #ccc5;
-  --border: #ccc;
-  --border-link: #111;
-  --border-color: #222 #777 #777 #222;
-  --invert: #000;
-  --err-color: #f77;
-  --err-background: #300;
-  --err-border: #a00;
+	--background-main: #333;
+	--background-side: #555;
+	--background-input: #333;
+	--background-link: #222;
+	--color-text: #ccc;
+	--color-title: #ccc;
+	--color-link: #8bf;
+	--placeholder-text: #777;
+	--hover: #ccc2;
+	--active: #ccc5;
+	--border: #ccc;
+	--border-link: #111;
+	--border-color: #222 #777 #777 #222;
+	--invert: #000;
+	--err-color: #f77;
+	--err-background: #300;
+	--err-border: #a00;
 }
 body[data-theme="old"] {
-  --background-main: #9f9;
-  --background-side: #eee;
-  --color-text: #000;
-  --color-title: #000;
-  --hover: #fff5;
-  --active: #fff7;
-  --border: #8be;
+	--background-main: #9f9;
+	--background-side: #eee;
+	--color-text: #000;
+	--color-title: #000;
+	--hover: #fff5;
+	--active: #fff7;
+	--border: #8be;
 }
 body[data-theme="light"],
 body[data-theme="old"] {
-  --background-input: #fff;
-  --background-link: #f8f9fa;
-  --placeholder-text: #444;
-  --color-link: #1452a8;
-  --border-link: #ccc;
-  --border-color: #022;
-  --err-color: #f00;
-  --err-background: #fcc;
-  --err-border: #f99;
+	--background-input: #fff;
+	--background-link: #f8f9fa;
+	--placeholder-text: #444;
+	--color-link: #1452a8;
+	--border-link: #ccc;
+	--border-color: #022;
+	--err-color: #f00;
+	--err-background: #fcc;
+	--err-border: #f99;
 }
 body {
-  border-right: 1px solid var(--background-side);
-  --sucess-color: #161;
-  --sucess-background: #2c2;
-  --sucess-border: #1a2;
+	border-right: 1px solid var(--background-side);
+	--sucess-color: #161;
+	--sucess-background: #2c2;
+	--sucess-border: #1a2;
 }
 body {
-  min-width: 210px;
-  background: var(--background-side);
-  overflow-x: hidden;
+	min-width: 210px;
+	background: var(--background-side);
+	overflow-x: hidden;
 }
 h1 {
-  font-size: 2em;
-  font-weight: bold;
+	font-size: 2em;
+	font-weight: bold;
 }
-h1, h2 {
-  text-align: center;
+h1,
+h2 {
+	text-align: center;
 }
-h1, h2, h3 {
-  color: var(--color-title);
+h1,
+h2,
+h3 {
+	color: var(--color-title);
 }
 div {
-  color: var(--color-text);
+	color: var(--color-text);
 }
-select, a, input, textarea {
-  color: var(--color-text);
-  border-color: var(--border-color);
-  background: var(--background-main);
+select,
+a,
+input,
+textarea {
+	color: var(--color-text);
+	border-color: var(--border-color);
+	background: var(--background-main);
 }
 form {
-  display: grid;
-  grid-gap: 10px 22px;
+	display: grid;
+	grid-gap: 10px 22px;
 }
 .form__input-content {
-  display: flex;
-  flex-direction: column;
-  grid-gap: 9px;
+	display: flex;
+	flex-direction: column;
+	grid-gap: 9px;
 }
-input[type="text"],input[type="number"],input[type="submit"], textarea {
-  padding: 5px;
+input[type="text"],
+input[type="number"],
+input[type="submit"],
+textarea {
+	padding: 5px;
 }
 textarea {
-  line-height: 22px;
+	line-height: 22px;
 }
 input::placeholder {
-  background: var(--background-main);
-  color: var(--placeholder-text);
+	background: var(--background-main);
+	color: var(--placeholder-text);
 }
 input:read-only:focus-visible,
 button:read-only:focus-visible,
 textarea:read-only:focus-visible {
-  outline: none;
+	outline: none;
 }
 button {
-  color: var(--color-text);
-  background: var(--background-main);
-  border-color: var(--border-color);
-  padding: 3px;
+	color: var(--color-text);
+	background: var(--background-main);
+	border-color: var(--border-color);
+	padding: 3px;
 }
 html[data-theme="light"] input,
 html[data-theme="light"] button,
 html[data-theme="old"] input,
 html[data-theme="old"] button {
-  border-width: 1px;
+	border-width: 1px;
 }
 html[data-theme="dark"] input,
 html[data-theme="dark"] button {
-  border-width: 2px;
+	border-width: 2px;
 }
-a {
+/* a {
   text-decoration-line: none;
-}
+} */
 select,
 select option {
-  background: var(--background-main);
-  cursor: pointer;
+	background: var(--background-main);
+	cursor: pointer;
 }
 /* Desarrollo */
 main {
-  background: var(--background-main);
-  margin: 12px 0;
-  padding: 5px;
+	background: var(--background-main);
+	margin: 12px 0;
+	padding: 5px;
 }
 .container {
-  border-top: 1px solid var(--border);
-  padding: 10px;
-  min-width: -webkit-fill-available;
+	border-top: 1px solid var(--border);
+	padding: 10px;
+	min-width: -webkit-fill-available;
 }
 .cont__flex {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 10px 0;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 10px 0;
 }
 .cont__pages {
-  display: block;
+	display: block;
 }
 .a {
-  white-space: pre-wrap;
+	white-space: pre-wrap;
 }
 .button {
-  font-size: 1em;
-  border: none;
-  border-bottom: 3px solid var(--border);
+	font-size: 1em;
+	border: none;
+	border-bottom: 3px solid var(--border);
 }
 ::-webkit-inner-spin-button {
-  display: none;
+	display: none;
 }
 ::-webkit-calendar-picker-indicator {
-  background-color: white;
+	background-color: white;
 }
 ::-webkit-datetime-edit-text {
-  color: #ccc;
+	color: #ccc;
 }
 ::-webkit-datetime-edit-month-field {
-  color: #ccc;
+	color: #ccc;
 }
 ::-webkit-datetime-edit-day-field {
-  color: #ccc;
+	color: #ccc;
 }
 ::-webkit-datetime-edit-year-field {
-  color: #ccc;
+	color: #ccc;
 }
 ::-webkit-calendar-picker-indicator {
-  background-image: url(/img/Calendar-icon.png);
-  background-position: center;
-  background-size: 20px 20px;
-  background-repeat: no-repeat;
-  color: rgba(255, 0, 0, 0);
+	background-image: url(/img/Calendar-icon.png);
+	background-position: center;
+	background-size: 20px 20px;
+	background-repeat: no-repeat;
+	color: rgba(255, 0, 0, 0);
 }
 ::-webkit-scrollbar {
-  width: 8px;
+	width: 8px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: var(--background-main);
+	background-color: var(--background-main);
 }
