--- a/app/pages/2/css.css
+++ b/app/pages/2/css.css
@@ -1,6 +1,3 @@
-.f2 {
-  grid-template-columns: repeat(3, minmax(0, 293px));
-}
 .div-inline {
  display: inline-block;
  margin: 0 8px;
@@ -32,4 +29,14 @@
 }
 .result {
   margin-top: 10px;
+}
+@media screen and (min-width: 440px){
+  .f2 {
+    grid-template-columns: repeat(2, minmax(0, 293px));
+  }
+}
+@media screen and (min-width: 800px){
+  .f2 {
+    grid-template-columns: repeat(3, minmax(0, 293px));
+  }
 }
